--- a/Resources/Private/Language/locallang_be.xlf
+++ b/Resources/Private/Language/locallang_be.xlf
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <xliff version="1.0">
-	<file source-language="en" datatype="plaintext" original="messages" date="2016-11-16T09:40:01Z" product-name="tt_board">
+	<file source-language="en" datatype="plaintext" original="EXT:tt_board/Resources/Private/Language/Modules/locallang_be.xlf" date="2016-11-16T09:40:01Z" product-name="tt_board">
 		<header/>
 		<body>
-			<trans-unit id="plugins_list_title" xml:space="preserve">
+			<trans-unit id="plugins_list_title">
 				<source>Message board</source>
 			</trans-unit>
-			<trans-unit id="plugins_list_description" xml:space="preserve">
+			<trans-unit id="plugins_list_description">
 				<source>Adds a message board ('list'-style forum) to the page.</source>
 			</trans-unit>
-			<trans-unit id="plugins_tree_title" xml:space="preserve">
+			<trans-unit id="plugins_tree_title">
 				<source>Discussion forum</source>
 			</trans-unit>
-			<trans-unit id="plugins_tree_description" xml:space="preserve">
+			<trans-unit id="plugins_tree_description">
 				<source>Add a threaded discussion forum ('tree'-style forum) to the page.</source>
 			</trans-unit>
 		</body>
