--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
 
+2023-08-02 Franz Holzinger  <franz@ttproducts.de>
+    * Breaking no. 88525: Remove "createDirs" directive of extension installation
 
 2023-08-01 Franz Holzinger  <franz@ttproducts.de>
     * remove the constants TT_BOARD_EXT, PATH_BE_TTBOARD, PATH_FE_TTBOARD_REL and TT_BOARD_CSS_PREFIX
