--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 
+2023-11-22 Franz Holzinger  <franz@ttproducts.de>
+    * remove Classes/Hooks/CmsBackend.php, because this has been replaced already by the PageContentPreviewRenderingListener.
+
 2023-08-02 Franz Holzinger  <franz@ttproducts.de>
     * Breaking no. 88525: Remove "createDirs" directive of extension installation
 
