--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -3,181 +3,181 @@
 	<file source-language="en" datatype="plaintext" original="EXT:tt_board/Resources/Private/Language/locallang.xlf" date="2016-11-16T09:40:24Z" product-name="tt_board">
 		<header/>
 		<body>
-			<trans-unit id="plugin">
+			<trans-unit id="plugin" resname="plugin">
 				<source>Message Board Plugin</source>
 			</trans-unit>
-			<trans-unit id="members_only">
+			<trans-unit id="members_only" resname="members_only">
 				<source>Only logged in members are allowed to post on this forum.</source>
 			</trans-unit>
-			<trans-unit id="subject">
+			<trans-unit id="subject" resname="subject">
 				<source>Subject:</source>
 			</trans-unit>
-			<trans-unit id="message">
+			<trans-unit id="message" resname="message">
 				<source>Message:</source>
 			</trans-unit>
-			<trans-unit id="author">
+			<trans-unit id="author" resname="author">
 				<source>Name:</source>
 			</trans-unit>
-			<trans-unit id="city">
+			<trans-unit id="city" resname="city">
 				<source>City:</source>
 			</trans-unit>
-			<trans-unit id="email">
+			<trans-unit id="email" resname="email">
 				<source>Email:</source>
 			</trans-unit>
-			<trans-unit id="captcha">
+			<trans-unit id="captcha" resname="captcha">
 				<source>Captcha:</source>
 			</trans-unit>
-			<trans-unit id="notify_me">
+			<trans-unit id="notify_me" resname="notify_me">
 				<source>Notify me&lt;br&gt;by reply:</source>
 			</trans-unit>
-			<trans-unit id="post_new">
+			<trans-unit id="post_new" resname="post_new">
 				<source>New Post</source>
 			</trans-unit>
-			<trans-unit id="post_reply">
+			<trans-unit id="post_reply" resname="post_reply">
 				<source>Post Reply</source>
 			</trans-unit>
-			<trans-unit id="post_new_reply">
+			<trans-unit id="post_new_reply" resname="post_new_reply">
 				<source>Post New Reply</source>
 			</trans-unit>
-			<trans-unit id="post.fillSubjectPrefix">
+			<trans-unit id="post.fillSubjectPrefix" resname="post.fillSubjectPrefix">
 				<source>Re: </source>
 			</trans-unit>
-			<trans-unit id="post.thanks">
+			<trans-unit id="post.thanks" resname="post.thanks">
 				<source>Many thanks for your contribution. Click again on the heading forum to read your contribution.</source>
 			</trans-unit>
-			<trans-unit id="board_age">
+			<trans-unit id="board_age" resname="board_age">
 				<source>Age</source>
 			</trans-unit>
-			<trans-unit id="board_ago">
+			<trans-unit id="board_ago" resname="board_ago">
 				<source>Ago</source>
 			</trans-unit>
-			<trans-unit id="board_author">
+			<trans-unit id="board_author" resname="board_author">
 				<source>Author</source>
 			</trans-unit>
-			<trans-unit id="board_city">
+			<trans-unit id="board_city" resname="board_city">
 				<source>City</source>
 			</trans-unit>
-			<trans-unit id="board_back_to_forum">
+			<trans-unit id="board_back_to_forum" resname="board_back_to_forum">
 				<source>Back to Forum</source>
 			</trans-unit>
-			<trans-unit id="board_by">
+			<trans-unit id="board_by" resname="board_by">
 				<source>By</source>
 			</trans-unit>
-			<trans-unit id="board_content">
+			<trans-unit id="board_content" resname="board_content">
 				<source>Content</source>
 			</trans-unit>
-			<trans-unit id="board_date">
+			<trans-unit id="board_date" resname="board_date">
 				<source>Date</source>
 			</trans-unit>
-			<trans-unit id="board_forum">
+			<trans-unit id="board_forum" resname="board_forum">
 				<source>Forum</source>
 			</trans-unit>
-			<trans-unit id="board_forum_list">
+			<trans-unit id="board_forum_list" resname="board_forum_list">
 				<source>Forum List</source>
 			</trans-unit>
-			<trans-unit id="board_go_to_top">
+			<trans-unit id="board_go_to_top" resname="board_go_to_top">
 				<source>Go to Top</source>
 			</trans-unit>
-			<trans-unit id="board_last_post">
+			<trans-unit id="board_last_post" resname="board_last_post">
 				<source>Last Post</source>
 			</trans-unit>
-			<trans-unit id="board_next_message">
+			<trans-unit id="board_next_message" resname="board_next_message">
 				<source>Next Message</source>
 			</trans-unit>
-			<trans-unit id="board_next_topic">
+			<trans-unit id="board_next_topic" resname="board_next_topic">
 				<source>Next Topic</source>
 			</trans-unit>
-			<trans-unit id="board_posts">
+			<trans-unit id="board_posts" resname="board_posts">
 				<source>Posts</source>
 			</trans-unit>
-			<trans-unit id="board_previous_message">
+			<trans-unit id="board_previous_message" resname="board_previous_message">
 				<source>Previous Message</source>
 			</trans-unit>
-			<trans-unit id="board_previous_topic">
+			<trans-unit id="board_previous_topic" resname="board_previous_topic">
 				<source>Previous Topic</source>
 			</trans-unit>
-			<trans-unit id="board_replies">
+			<trans-unit id="board_replies" resname="board_replies">
 				<source>Replies</source>
 			</trans-unit>
-			<trans-unit id="board_search">
+			<trans-unit id="board_search" resname="board_search">
 				<source>Searching</source>
 			</trans-unit>
-			<trans-unit id="board_subject">
+			<trans-unit id="board_subject" resname="board_subject">
 				<source>Subject</source>
 			</trans-unit>
-			<trans-unit id="board_threads">
+			<trans-unit id="board_threads" resname="board_threads">
 				<source>Threads</source>
 			</trans-unit>
-			<trans-unit id="board_thread_starter">
+			<trans-unit id="board_thread_starter" resname="board_thread_starter">
 				<source>Thread Starter</source>
 			</trans-unit>
-			<trans-unit id="board_topics">
+			<trans-unit id="board_topics" resname="board_topics">
 				<source>Topics</source>
 			</trans-unit>
-			<trans-unit id="board_new">
+			<trans-unit id="board_new" resname="board_new">
 				<source>NEW</source>
 			</trans-unit>
-			<trans-unit id="button_search">
+			<trans-unit id="button_search" resname="button_search">
 				<source>Search in the Board</source>
 			</trans-unit>
-			<trans-unit id="spam_detected">
+			<trans-unit id="spam_detected" resname="spam_detected">
 				<source>The spam word '%s' has been detected!</source>
 			</trans-unit>
-			<trans-unit id="wrong_captcha">
+			<trans-unit id="wrong_captcha" resname="wrong_captcha">
 				<source>Wrong captcha word '%s' entered!</source>
 			</trans-unit>
-			<trans-unit id="error_access_denied">
+			<trans-unit id="error_access_denied" resname="error_access_denied">
 				<source>Access denied!</source>
 			</trans-unit>
-			<trans-unit id="error_email">
+			<trans-unit id="error_email" resname="error_email">
 				<source>'%s' is not a valid email address!</source>
 			</trans-unit>
-			<trans-unit id="error_no_email">
+			<trans-unit id="error_no_email" resname="error_no_email">
 				<source>You did not enter an email address!</source>
 			</trans-unit>
-			<trans-unit id="error_no_permission">
+			<trans-unit id="error_no_permission" resname="error_no_permission">
 				<source>You do not have the permission to post into this forum!</source>
 			</trans-unit>
-			<trans-unit id="p_at">
+			<trans-unit id="p_at" resname="p_at">
 				<source>at</source>
 			</trans-unit>
-			<trans-unit id="p_salutation">
+			<trans-unit id="p_salutation" resname="p_salutation">
 				<source>Hello</source>
 			</trans-unit>
-			<trans-unit id="p_url_title">
+			<trans-unit id="p_url_title" resname="p_url_title">
 				<source>This thread is located at</source>
 			</trans-unit>
-			<trans-unit id="p_text_snippet">
+			<trans-unit id="p_text_snippet" resname="p_text_snippet">
 				<source>Text Snippet</source>
 			</trans-unit>
-			<trans-unit id="p_subject">
+			<trans-unit id="p_subject" resname="p_subject">
 				<source>Subject</source>
 			</trans-unit>
-			<trans-unit id="p_content">
+			<trans-unit id="p_content" resname="p_content">
 				<source>Content</source>
 			</trans-unit>
-			<trans-unit id="newReply.author">
+			<trans-unit id="newReply.author" resname="newReply.author">
 				<source>Author</source>
 			</trans-unit>
-			<trans-unit id="newReply.city">
+			<trans-unit id="newReply.city" resname="newReply.city">
 				<source>City</source>
 			</trans-unit>
-			<trans-unit id="newReply.didWhat">
+			<trans-unit id="newReply.didWhat" resname="newReply.didWhat">
 				<source>has just replied to a thread at</source>
 			</trans-unit>
-			<trans-unit id="newReply.followThisLink">
+			<trans-unit id="newReply.followThisLink" resname="newReply.followThisLink">
 				<source>Follow this link</source>
 			</trans-unit>
-			<trans-unit id="newReply.message">
+			<trans-unit id="newReply.message" resname="newReply.message">
 				<source>Message</source>
 			</trans-unit>
-			<trans-unit id="newReply.subjectPrefix">
+			<trans-unit id="newReply.subjectPrefix" resname="newReply.subjectPrefix">
 				<source>Reply to post at</source>
 			</trans-unit>
-			<trans-unit id="newThread.didWhat">
+			<trans-unit id="newThread.didWhat" resname="newThread.didWhat">
 				<source>has just created a new thread at</source>
 			</trans-unit>
-			<trans-unit id="newThread.subjectPrefix">
+			<trans-unit id="newThread.subjectPrefix" resname="newThread.subjectPrefix">
 				<source>New thread</source>
 			</trans-unit>
 		</body>
