--- a/Resources/Private/Language/locallang_csh_ttboard.xlf
+++ b/Resources/Private/Language/locallang_csh_ttboard.xlf
@@ -3,13 +3,13 @@
 	<file source-language="en" datatype="plaintext" original="EXT:tt_board/Resources/Private/Language/locallang_csh_ttboard.xlf" date="2016-11-16T09:39:34Z" product-name="tt_board">
 		<header/>
 		<body>
-			<trans-unit id=".description">
+			<trans-unit id=".description" resname=".description">
 				<source>Built-in discussion board.</source>
 			</trans-unit>
-			<trans-unit id=".details">
+			<trans-unit id=".details" resname=".details">
 				<source>This table is used by the default TypoScript discussion board/list available. All entries goes into this table and you can thus administer the forums through the backend.</source>
 			</trans-unit>
-			<trans-unit id="_.seeAlso">
+			<trans-unit id="_.seeAlso" resname="_.seeAlso">
 				<source>tt_content:list_type</source>
 			</trans-unit>
 		</body>
