--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,17 @@
 TODO:
 Replace $GLOBALS['TYPO3_CONF_VARS']['EXTCONF'][$extensionKey] by
 https://docs.typo3.org/m/typo3/reference-coreapi/11.5/en-us/ExtensionArchitecture/FileStructure/ExtConfTemplate.html#accessing-saved-options
+Remove the aliases tt_board_tree.php and tt_board_list.php deprecated in addPItoST43.
 
+2024-05-01 Franz Holzinger  <franz@ttproducts.de>
+    * introduction of Dependency Injection
+    * fix bug with page title and removed indexedDocTitle member variable of $GLOBALS['TSFE']
+
+2024-04-14 Franz Holzinger  <franz@ttproducts.de>
+    * Notice: The files tt_board_tree.php and tt_board_list.php which are deprecated since TYPO3 8 for
+        addPItoST43 are still needed here as aliases
+        for JambageCom\TtBoard\Controller\TreePluginController
+        and for JambageCom\TtBoard\Controller\ListPluginController.
 
 2024-04-04 Franz Holzinger  <franz@ttproducts.de>
     * use checkMXRecord for each e-mail address before sending a notification e-mail
