--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,9 @@ Replace $GLOBALS['TYPO3_CONF_VARS']['EXTCONF'][$extensionKey] by
 https://docs.typo3.org/m/typo3/reference-coreapi/11.5/en-us/ExtensionArchitecture/FileStructure/ExtConfTemplate.html#accessing-saved-options
 Remove the aliases tt_board_tree.php and tt_board_list.php deprecated in addPItoST43.
 
+2024-11-15 Franz Holzinger  <franz@ttproducts.de>
+    * support TYPO3 13
+
 2024-05-01 Franz Holzinger  <franz@ttproducts.de>
     * introduction of Dependency Injection
     * fix bug with page title and removed indexedDocTitle member variable of $GLOBALS['TSFE']
