--- a/Resources/Private/Language/locallang_tca.xlf
+++ b/Resources/Private/Language/locallang_tca.xlf
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
-	<file source-language="en" datatype="plaintext" original="EXT:tt_board/Resources/Private/Language/locallang_tca.xlf" date="2016-11-16T09:40:14Z" product-name="tt_board">
+	<file source-language="en" datatype="plaintext" original="EXT:tt_board/Resources/Private/Language/locallang_tca.xlf" date="2025-07-21T18:07:00Z" product-name="tt_board">
 		<header/>
 		<body>
 			<trans-unit id="pi_list" resname="pi_list">
-				<source>Board, List</source>
+				<source>Message Board (list)</source>
 			</trans-unit>
 			<trans-unit id="pi_tree" resname="pi_tree">
-				<source>Board, Tree</source>
+				<source>Discussion Forum (tree)</source>
 			</trans-unit>
 			<trans-unit id="tt_board" resname="tt_board">
 				<source>Board</source>
