--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,9 @@ Replace $GLOBALS['TYPO3_CONF_VARS']['EXTCONF'][$extensionKey] by
 https://docs.typo3.org/m/typo3/reference-coreapi/11.5/en-us/ExtensionArchitecture/FileStructure/ExtConfTemplate.html#accessing-saved-options
 Remove the file Resources/Private/Language/locallang_be.xlf
 
+2025-08-14 Franz Holzinger <franz@ttproducts.de>
+    * remove support for outdated thinkopenat/captcha from Bernhard Kraft
+
 2025-07-26 Franz Holzinger <franz@ttproducts.de>
     * remove dependency on AbstractPlugin
 
